Add Facebook and Instagram social links to footer

--- a/app/components/Footer.module.css
+++ b/app/components/Footer.module.css
@@ -52,6 +52,42 @@
   width: 100%;
 }
 
+.social {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  padding-top: 1rem;
+}
+
+.socialLink {
+  color: var(--color-off-white);
+  font-size: 1rem;
+  font-weight: 400;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  position: relative;
+}
+
+.socialLink:hover {
+  color: rgba(245, 245, 240, 0.8);
+}
+
+.socialLink::after {
+  content: '';
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: var(--color-off-white);
+  transition: width 0.3s ease;
+}
+
+.socialLink:hover::after {
+  width: 100%;
+}
+
 .copyright {
   text-align: center;
   padding-top: 2rem;
